Fix query tool horizontal scrolling of results. Fixes #1362
The backgrid-sizeable's css property 'overflow: hidden' was overriding backgrid table css property and It was reproducible only in runtime.
Removed 'overflow: hidden' property from backgrid-sizeabled-columns.css

--- a/web/pgadmin/static/css/backgrid/backgrid-sizeable-columns.css
+++ b/web/pgadmin/static/css/backgrid/backgrid-sizeable-columns.css
@@ -6,7 +6,6 @@
  Licensed under the MIT @license.
  */
 table.backgrid {
-    overflow: hidden;
     position: relative;
 }
 
